--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
+- degree: Full Stack Webdeveloper Masterdegree
+  uni: BSUIR
   year: June, 2014 &mdash; January, 2015
   # awards:
-  # summary:
+  summary: work in progress
