--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
 - degree: Full Stack Webdeveloper Masterdegree
   uni: BSUIR
-  year: June, 2014 &mdash; January, 2015
+  year: 
   # awards:
   summary: I have already created 2 sites on Django with a bit of bootstrap. One site is a paid-clinic, where patients can sign up for a doctor's reception. Second one is made up from the information pardsed from belavia.by site, and is made for booking tickets for flights
