--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,10 +1,10 @@
 # Interests
-- description: Electron, Atom, GraphQL, Webhooks, and most of all... Git
-- description: Movies about a cappella singing 
-- description: Anaheim Theme Parks
+- description: Python, Django, PostgreSQL, JS, Web-development
+#- description: Movies about a cappella singing 
+#- description: Anaheim Theme Parks
 
 
 - description: Travel
-- description: Animated cartoons involving restuarants and burgers
-- description: Amusement parks
+#- description: Animated cartoons involving restuarants and burgers
+#- description: Amusement parks
 
