--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -1,10 +1,10 @@
 # Recognitions
-- award: Speaker at GitHub Universe
-  organization: GitHub
-  year: 2016
-  summary: Chosen to speak at GitHub Universe on Open Source in Underrepresented Communities
+- award:
+  organization: 
+  year: 
+  summary: 
 
-- award: Dean's List
-  organization: University of South Florida
-  year: 2014
-  summary: Awarded the Dean's List after graduating with a cumulative 3.60 GPA.
+- award:
+  organization:
+  year: 
+  summary:
